part1/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  strategy: {}
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      containers:
      - image: melxi/hashgenerator:0.1
        name: hashgenerator
