part1/log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - name: http
      protocol: TCP
      port: 8088
      targetPort: 3001
